Fix bug: german and Dutch text doesn't fit popup

--- a/sources/easygenerator.Web/Content/notifications.less
+++ b/sources/easygenerator.Web/Content/notifications.less
@@ -1,5 +1,4 @@
 @import "helpers.less";
-@import "mixin.less";
 
 .user-notification-viewer-wrapper {
     position: absolute;
@@ -110,29 +109,29 @@
 }
 
 .user-notification-wrapper {
-    .display-flex();
-    .flex-direction(column);
-    .flex-shrink(0);
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
     width: 413px;
     height: 280px;
     color: #42515f;
 }
 
 .user-notification-header {
-    .display-flex();
-    .flex-direction(row);
-    .flex-shrink(0);
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
     padding: 10px 10px 0px 10px;
 
     .user-notification-header-image {
-        .align-self(center);
+        align-self: center;
         width: 53px;
         height: 53px;
         background: url(../Content/images/sprites_64.png) -76px -6px;
     }
 
     .user-notification-header-content {
-        .align-self(center);
+        align-self: center;
         margin-left: 10px;
 
         .user-notification-title {
@@ -149,18 +148,18 @@
 }
 
 .user-notification-content {
-    .display-flex();
-    .flex-direction(column);
-    .flex-grow(2);
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+    flex-shrink: 0;
     word-wrap: break-word;
     padding: 10px 10px 0px 10px;
 
     .user-notification-actions {
-        .flex(2);
-        .display-flex();
-        .align-items(center);
-        .justify-content(center);
-        padding: 10px 0px;
+        display: flex;
+        flex: 2 0 50px;
+        align-items: center;
+        justify-content: center;
 
         .btn {
             font: 13px 'OpenSans';
@@ -182,7 +181,7 @@
 }
 
 .user-notification-footer {
-    .display-flex();
+    display: flex;
     position: relative;
     min-height: 64px;
     padding: 15px 25px 15px 45px;
